# AgentToAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent_to_agent/: __init__.py  main.py
agent_to_agent/api/: __init__.py  ata.py
agent_to_agent/factory/: agentFactory.py
agent_to_agent/heartbeatmonitor/: heartbeatMonitor.py
agent_to_agent/middleware/: __init__.py
agent_to_agent/models/: agentConnectionRequest.py  agentInfo.py  agentRequest.py  agentStateHistory.py  agentTask.py  agentTaskEvent.py  runtimeAgent.py
agent_to_agent/services/: __init__.py  agentCallbackService.py  agentManager.py  agentTaskDispatchService.py  agentTaskService.py  graphAgentService.py  permissionFileService.py  permissionService.py  skillsManager.py  taskPresentationService.py
agent_to_agent/skillsCenter/: skill_center.py
agent_to_agent/skillsCenter/baseskills/: agentConnectionTool.py  downloadSkillTool.py  heartbeatTool.py
agent_to_agent/skillsCenter/skills/: .skills_store_lock.json
agent_to_agent/skillsCenter/skills/sql-toolkit/: _meta.json
agent_to_agent/skillsCenter/skills/sql-toolkit/scripts/: run.py
agent_to_agent/static/: allowed_skills.json  downloadskills.json
agent_to_agent/utils/: __init__.py  executableSkillTool.py
alembic/: env.py
config/: __init__.py
tests/: test_main.py
